:recycle: refact: campo valor de agenda para agendaServico